Changes for 2.2.16rc1

New features:
........S. [ZBXNEXT-1859] improved performance by not inserting events of auto registration if no such action was enabled, insert/update/select in a bulk on auto registration data from proxy (Sasha, vso)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)

Bug fixes:
..F....... [ZBX-11219] renamed second argument for net.dns and net.dns.record items from "zone" to "name" (Cemeris)
..F....... [ZBX-8457] fixed user macro resolving for templated host and templates (Oleg)
...G...... [ZBX-10906] fixed agent active checks being delayed if system time was pushed back (wiper)
A......... [ZBX-10842] fixed sql error when updating httptest with applicationid and without httpstepid parameters (Cemeris)
A......... [ZBX-10842] prevented disappearing of step items when updating httptest without applicationid, httpstepid parameters (Cemeris)
A......... [ZBX-10842] fixed connecting web scenario applicationid to created steps when updating with API httptest.update mehtod (Cemeris)
..F....... [ZBX-9656] prevented updating comments for discovered triggers (Ivo)
..F....PS. [ZBX-11221] fixed MySQL connection issue by overriding user defined auto commit setting (Oleg, vso)
........S. [ZBX-10694] reverted hypervisor health status to HostSystem.overallStatus property (wiper)
.......PS. [ZBX-11213] fixed database monitoring keys (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.15

2.2.15rc1 was released as 2.2.15 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.15rc1

New features:
...G...... [ZBXNEXT-3389] removed value length limitation in zabbix_sender when reading data from file/stream (wiper)

Bug fixes:
........S. [ZBX-11204] fixed parameter parsing in calculated items when it contains double quote escaping (Sergejs)